<resources>
    <string name="app_name">ReCapture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_memory_list">No memories to show. Click the add button to create one.</string>
    <string name="title">Give a title to the memory.</string>
    <string name="ask_for_description">(What do you want to remember about this memory? Write the way you like.)</string>
    <string name="ask_for_photos">(If you have photos related to this memory, you can browse the gallery and add them. Click Browse to select photos.)</string>
    <string name="next">Next</string>
    <string name="no_file_selected">No file selected</string>
    <string name="selected_0_photos">Selected 0 photo</string>
    <string name="create">Create</string>
    <string name="no_photos_to_show">No photos to show. The photos you add to memories will appear here.</string>
    <string name="deleteTitle">Confirm Delete</string>
    <string name="promptDeleteMem">Are you sure you want to delete this memory?</string>
    <string name="PostiveYesButton">Delete</string>
    <string name="NegativeNoButton">Cancel</string>
    <string name="promptDeletePeople">Are you sure you want to delete this person?</string>
    <string name="info">ReCapture is a very simple app for your easy to use. You can easily save your sweet or bitter moments here attaching photos. Currently it is in beta version. Hope we will add more features in the near future. Thanks for using this app!</string>
</resources>
